# OpenGLDiscovery

./: .gitignore  .gitmodules  Build.lua  CMakeLists.txt  Main.cpp  OpenGLDiscovery.sln  OpenGLDiscovery.vcxproj  OpenGLDiscovery.vcxproj.filters  README.md  glad.c
Core/: Build-Core.lua
Core/Shaders/: basicShader.fs  basicShader.vs
Core/Source/: main.cpp
includes/: shader.h
includes/glad/: glad.h
src/: Main.cpp  shader.h
src/HelloWindow/: hello_window.cpp
